<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/текст3" android:textSize="30sp" />
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/текст2"
            android:textSize="23sp"
            android:padding="50px"
            android:layout_margin="70px" />

    </LinearLayout>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/текст1" />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/текст5" />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/текст4"
            android:textSize="26sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="125dp"
        android:minWidth="410dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/текст7"
            android:textSize="30sp" />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:minHeight="125dp"
            android:minWidth="125dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="125dp"
            android:minWidth="135dp">
            <ListView android:layout_width="wrap_content"
                android:layout_height="125dp" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</LinearLayout>